kubernetes/argocd/applications/trodain/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trodain-service
spec:
  selector:
    app: trodain
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
